apps/calibre-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-downloader
  namespace: media
spec:
  ports:
  - name: calibre-downloader
    port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app: calibre-downloader
